--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -122,8 +122,9 @@
     @include flex_start;
   }
 
-  & .image-btn {
-    padding: 0 1rem 0 1rem;
+  & .project-anchors {
+    z-index: 1000;
+    padding: 2rem 1.5rem 0 2rem;
     grid-area: 1 / 12 / 2 / -1;
   }
 }
