--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -515,7 +515,7 @@ body {
 
 .button-totop {
   background-color: transparent;
-  border: 2px solid var(--logo-color);
+  border: 1px solid var(--logo-color);
   border-radius: 50%;
   bottom: 30px;
   right: 30px;
@@ -1016,6 +1016,17 @@ nav .nav--links .resume-button {
   content: "◦";
   margin-right: 3px;
 }
+.project-container .project-anchors {
+  margin: 2rem 0 0 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+.project-container .project-anchors a:hover::after {
+  width: 0;
+  height: 0;
+}
 .project-container .project-image {
   display: flex;
   justify-content: center;
@@ -1027,12 +1038,10 @@ nav .nav--links .resume-button {
   border-radius: 3px;
   z-index: 1;
 }
-.project-container .image-btn {
-  z-index: 3;
-  align-self: stretch;
-  border: 0;
-  background-color: rgba(255, 255, 255, 0.8);
-  cursor: pointer;
+.project-container.project-anchors {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .project-container:nth-child(even) .project-title {
   grid-area: 1/1/3/-1;
@@ -1047,18 +1056,20 @@ nav .nav--links .resume-button {
   grid-area: 2/1/12/7;
 }
 .project-container:nth-child(even) .project-tools {
-  grid-area: 12/1/-1/-1;
+  grid-area: 9/1/-1/-1;
   padding-left: 5px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+.project-container:nth-child(even) .project-anchors {
+  grid-area: 11/1/-1/-1;
   display: flex;
   justify-content: start;
   align-items: center;
 }
 .project-container:nth-child(even) .project-image {
   grid-area: 1/6/-1/-1;
-}
-.project-container:nth-child(even) .image-btn {
-  grid-area: 1/12/2/-1;
-  padding: 0rem 1rem 0rem 1rem;
 }
 .project-container:nth-child(odd) .project-title {
   grid-area: 1/1/3/-1;
@@ -1073,8 +1084,14 @@ nav .nav--links .resume-button {
   grid-area: 2/7/12/-1;
 }
 .project-container:nth-child(odd) .project-tools {
-  grid-area: 12/1/-1/-1;
+  grid-area: 9/1/-1/-1;
   padding-left: 5px;
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+.project-container:nth-child(odd) .project-anchors {
+  grid-area: 11/1/-1/-1;
   display: flex;
   justify-content: end;
   align-items: center;
@@ -1084,7 +1101,7 @@ nav .nav--links .resume-button {
 }
 .project-container:nth-child(odd) .image-btn {
   padding: 0 1rem 0 1rem;
-  grid-area: 1/1/2/2;
+  grid-area: 1/1/3/2;
 }
 
 .flex-button {
@@ -1141,8 +1158,9 @@ nav .nav--links .resume-button {
     justify-content: start;
     align-items: center;
   }
-  .project-container:nth-child(even) .image-btn {
-    padding: 0 1rem 0 1rem;
+  .project-container:nth-child(even) .project-anchors {
+    z-index: 1000;
+    padding: 2rem 1.5rem 0 2rem;
     grid-area: 1/12/2/-1;
   }
   .project-container:nth-child(odd) .project-image {
@@ -1173,8 +1191,9 @@ nav .nav--links .resume-button {
     justify-content: start;
     align-items: center;
   }
-  .project-container:nth-child(odd) .image-btn {
-    padding: 0 1rem 0 1rem;
+  .project-container:nth-child(odd) .project-anchors {
+    z-index: 1000;
+    padding: 2rem 1.5rem 0 2rem;
     grid-area: 1/12/2/-1;
   }
   .section-projects {
@@ -1237,7 +1256,7 @@ nav .nav--links .resume-button {
 }
 .hero__contact-button:hover {
   color: var(--white);
-  box-shadow: inset 0 0 0 1px var(--white);
+  box-shadow: inset 0 0 0 0.5px var(--white);
   background-color: transparent;
 }
 .hero a {
