--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,7 @@
 
 @import "components/button";
 @import "components/form";
+@import "components/carousel";
 
 @import "layout/footer";
 @import "layout/header";
