--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,18 +1,11 @@
 :root {
-  --light-blue: #2a3260;
-  --dark-blue: #151934;
-  --contact-color: #424a55;
-  --footer-color: #353744;
-  --text-gray: #626974;
-  --yellow: #f7ea90;
-  --light-red: #cf7873;
-  --light-red-disabled: #cf78736b;
   --dark-navy: #020c1b;
   --logo-color: #e23c52;
   // --navy: #0a192f;
   --navy: #002244;
   --light-navy: #112240;
   --lightest-navy: #233554;
+  --lightest-navy-rgba: rgba(35, 53, 84, 0.5);
   --navy-shadow: rgba(2, 12, 27, 0.7);
   --dark-slate: #495670;
   --slate: #8892b0;
@@ -21,10 +14,7 @@
   --white: #e6f1ff;
   // --green: #64ffda;
   --green: #08fdd8;
-  --coral: coral;
   --green-tint: rgba(100, 255, 218, 0.1);
-  --pink: #f57dff;
-  --blue: #57cbff;
 
   
   --main-fonts: "Calibre", "Open Sans", sans-serif;
