--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -21,6 +21,9 @@ body {
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+    -webkit-animation-name: moveInLeft;
+    -webkit-animation-duration: 1s;
+    -webkit-animation-timing-function: ease-out;
 
     @include respond(tab-land) {
       font-size: 4.2rem;
@@ -36,6 +39,7 @@ body {
     line-height: 1.2;
     margin-bottom: 2.8rem;
     animation: moveInRight 1s ease-out;
+    -webkit-animation: moveInRight 1s ease-out;
 
     @include respond(tab-land) {
       font-size: 3.2rem;
