--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -51,3 +51,61 @@
     cursor: pointer;
   }
 }
+
+.form-button,
+.form-button:link,
+.form-button:visited {
+  text-transform: uppercase;
+
+  padding: 1.5rem 2rem;
+  border-radius: 10rem;
+
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+  font-size: var(--fonts-xs);
+  background-color: var(--green);
+  color: var(--dark-navy);
+
+  border: none;
+  cursor: pointer;
+}
+
+.form-button:disabled {
+  opacity: 0.6;
+  cursor: default;
+}
+
+.form-button:not(:disabled) {
+  position: relative;
+
+  &:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 80%);
+
+    &::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+      background-color: var(--green);
+    }
+  }
+
+  &:active,
+  &:focus {
+    outline: none;
+    transform: translateY(-1px);
+    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 60%);
+  }
+
+  &::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 10rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+  }
+}
