--- a/src/styles/components/_form.scss
+++ b/src/styles/components/_form.scss
@@ -1,18 +1,22 @@
-.form {
-  &__group:not(:last-child) {
-    margin-bottom: 2rem;
+.contact-form {
+  &__group {
+    @include flex_center;
+    gap: 1.8rem;
+    margin-bottom: 3.2rem;
+    padding: 0 4rem;
   }
 
   &__input {
+    width: 100% !important;
     font-size: 1.5rem;
     font-family: inherit;
     color: inherit;
     padding: 1.5rem 2rem;
     border-radius: 2px;
-    // background-color: rgba($color-white, 0.5);
+    background-color: var(--lightest-slate-rgba);
+    box-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.3);
     border: none;
-    border-bottom: 3px solid transparent;
-    width: 90%;
+    border-bottom: 5px solid transparent;
     display: block;
     transition: all 0.3s;
 
@@ -22,16 +26,23 @@
 
     &:focus {
       outline: none;
-      // box-shadow: 0 1rem 2rem rgba($color-black, 0.1);
-      // border-bottom: 3px solid $color-primary;
+      box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+      border-bottom: 4px solid var(--green);
     }
 
-    &:focus:invalid {
-      // border-bottom: 3px solid $color-secondary-dark;
+    &:focus.invalid {
+      border-bottom: 4px solid var(--error-color);
     }
 
     &::-webkit-input-placeholder {
-      // color: $color-grey-dark-2;
+      color: var(--lightest-navy);
+      font-size: var(--fonts-xs);
+    }
+
+    &:placeholder-shown + &__label {
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(-4rem);
     }
   }
 
@@ -42,62 +53,6 @@
     margin-top: 0.7rem;
     display: block;
     transition: all 0.3s;
-  }
-
-  &__input:placeholder-shown + &__label {
-    opacity: 0;
-    visibility: hidden;
-    transform: translateY(-4rem);
-  }
-
-  &__radio-group {
-    width: 49%;
-    display: inline-block;
-
-    @include respond(tab-port) {
-      width: 100%;
-      margin-bottom: 2rem;
-    }
-  }
-
-  &__radio-input {
-    display: none;
-  }
-
-  &__radio-label {
-    // font-size: $default-font-size;
-    cursor: pointer;
-    position: relative;
-    padding-left: 4.5rem;
-  }
-
-  &__radio-button {
-    height: 3rem;
-    width: 3rem;
-    // border: 5px solid $color-primary;
-    border-radius: 50%;
-    display: inline-block;
-    position: absolute;
-    left: 0;
-    top: -0.4rem;
-
-    &::after {
-      content: "";
-      display: block;
-      height: 1.3rem;
-      width: 1.3rem;
-      border-radius: 50%;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      // background-color: $color-primary;
-      opacity: 0;
-      transition: opacity 0.2s;
-    }
-  }
-
-  &__radio-input:checked ~ &__radio-label &__radio-button::after {
-    opacity: 1;
+    color: var(--lightest-slate);
   }
 }
