--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,7 +19,8 @@ ORDER: Base + typography > general layout + grid > page layout > components
 :root {
   --dark-navy: #020c1b;
   --logo-color: #e23c52;
-  --navy: #002244;
+  --error-color: #dc3545;
+  --navy: #002850;
   --light-navy: #112240;
   --lightest-navy: #233554;
   --lightest-navy-rgba: rgba(35, 53, 84, 0.5);
@@ -27,7 +28,8 @@ ORDER: Base + typography > general layout + grid > page layout > components
   --dark-slate: #495670;
   --slate: #8892b0;
   --light-slate: #a8b2d1;
-  --lightest-slate: #ccd6f6;
+  --lightest-slate: rgb(204, 214, 246);
+  --lightest-slate-rgba: rgba(204, 214, 246, 0.8);
   --white: #e6f1ff;
   --green: #08fdd8;
   --green-tint: rgba(100, 255, 218, 0.1);
@@ -534,94 +536,117 @@ body {
   cursor: pointer;
 }
 
-.form__group:not(:last-child) {
-  margin-bottom: 2rem;
+.form-button,
+.form-button:link,
+.form-button:visited {
+  text-transform: uppercase;
+  padding: 1.5rem 2rem;
+  border-radius: 10rem;
+  transition: all 0.2s;
+  font-size: var(--fonts-xs);
+  background-color: var(--green);
+  color: var(--dark-navy);
+  border: none;
+  cursor: pointer;
 }
-.form__input {
+
+.form-button:disabled {
+  opacity: 0.6;
+  cursor: default;
+}
+
+.form-button:not(:disabled) {
+  position: relative;
+}
+.form-button:not(:disabled):hover {
+  transform: translateY(-3px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.8);
+}
+.form-button:not(:disabled):hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+  background-color: var(--green);
+}
+.form-button:not(:disabled):active, .form-button:not(:disabled):focus {
+  outline: none;
+  transform: translateY(-1px);
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.6);
+}
+.form-button:not(:disabled)::after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 10rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all 0.4s;
+}
+
+.contact-form__group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1.8rem;
+  margin-bottom: 3.2rem;
+  padding: 0 4rem;
+}
+.contact-form__input {
+  width: 100% !important;
   font-size: 1.5rem;
   font-family: inherit;
   color: inherit;
   padding: 1.5rem 2rem;
   border-radius: 2px;
+  background-color: var(--lightest-slate-rgba);
+  box-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.3);
   border: none;
-  border-bottom: 3px solid transparent;
-  width: 90%;
+  border-bottom: 5px solid transparent;
   display: block;
   transition: all 0.3s;
 }
 @media only screen and (max-width: 56.25em) {
-  .form__input {
+  .contact-form__input {
     width: 100%;
   }
 }
-.form__input:focus {
+.contact-form__input:focus {
   outline: none;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.1);
+  border-bottom: 4px solid var(--green);
 }
-.form__label {
+.contact-form__input:focus.invalid {
+  border-bottom: 4px solid var(--error-color);
+}
+.contact-form__input::-webkit-input-placeholder {
+  color: var(--lightest-navy);
+  font-size: var(--fonts-xs);
+}
+.contact-form__input:-moz-placeholder-shown + .contact-form__input__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem);
+}
+.contact-form__input:-ms-input-placeholder + .contact-form__input__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem);
+}
+.contact-form__input:placeholder-shown + .contact-form__input__label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem);
+}
+.contact-form__label {
   font-size: 1.2rem;
   font-weight: 700;
   margin-left: 2rem;
   margin-top: 0.7rem;
   display: block;
   transition: all 0.3s;
-}
-.form__input:-moz-placeholder-shown + .form__label {
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-4rem);
-}
-.form__input:-ms-input-placeholder + .form__label {
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-4rem);
-}
-.form__input:placeholder-shown + .form__label {
-  opacity: 0;
-  visibility: hidden;
-  transform: translateY(-4rem);
-}
-.form__radio-group {
-  width: 49%;
-  display: inline-block;
-}
-@media only screen and (max-width: 56.25em) {
-  .form__radio-group {
-    width: 100%;
-    margin-bottom: 2rem;
-  }
-}
-.form__radio-input {
-  display: none;
-}
-.form__radio-label {
-  cursor: pointer;
-  position: relative;
-  padding-left: 4.5rem;
-}
-.form__radio-button {
-  height: 3rem;
-  width: 3rem;
-  border-radius: 50%;
-  display: inline-block;
-  position: absolute;
-  left: 0;
-  top: -0.4rem;
-}
-.form__radio-button::after {
-  content: "";
-  display: block;
-  height: 1.3rem;
-  width: 1.3rem;
-  border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  opacity: 0;
-  transition: opacity 0.2s;
-}
-.form__radio-input:checked ~ .form__radio-label .form__radio-button::after {
-  opacity: 1;
+  color: var(--lightest-slate);
 }
 
 .carousel-root {
@@ -1003,7 +1028,7 @@ nav .nav--links .resume-button {
 }
 
 .project-container {
-  padding: 0 16rem;
+  padding: 0 12rem;
   position: relative;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
@@ -1468,5 +1493,53 @@ nav .nav--links .resume-button {
     padding: 10rem 0rem;
     min-height: 110vh;
     max-height: 110vh;
+  }
+}
+.section-contact {
+  padding: 10rem 22rem;
+}
+
+.contact {
+  height: 100%;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 3fr 2fr;
+  align-items: center;
+  justify-content: center;
+  gap: 9.6rem;
+}
+.contact__text-box {
+  align-self: center;
+}
+
+@media only screen and (max-width: 100em) {
+  .section-contact {
+    padding: 10rem 10rem;
+  }
+}
+@media only screen and (max-width: 85em) {
+  .section-contact {
+    padding: 10rem 6rem;
+  }
+}
+@media only screen and (max-width: 56.25em) {
+  .section-contact {
+    padding: 10rem 10rem;
+  }
+  .contact {
+    margin-top: 3.6rem;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 0rem;
+  }
+}
+@media only screen and (max-width: 48.25em) {
+  .section-contact {
+    padding: 10rem 6rem;
+  }
+}
+@media only screen and (max-width: 37.5em) {
+  .section-contact {
+    padding: 10rem 4rem;
   }
 }/*# sourceMappingURL=style.css.map */
