--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,7 @@
 
 @import "components/button";
 @import "components/form";
+@import "components/map";
 @import "components/carousel";
 
 @import "layout/footer";
@@ -19,3 +20,4 @@
 @import "pages/projects";
 @import "pages/hero";
 @import "pages/experience";
+@import "pages/contact";
