--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1254,10 +1254,14 @@ nav .nav--links .resume-button {
 }
 
 .section-contact {
-  padding: 10rem 22rem;
+  padding: 15rem 0rem 0rem 12rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .contact {
+  width: 100%;
   height: 100%;
   margin: 0 auto;
   display: grid;
@@ -1265,21 +1269,47 @@ nav .nav--links .resume-button {
   align-items: center;
   justify-content: center;
   gap: 9.6rem;
+  grid-template-columns: 1fr 1fr;
+  gap: 4.8rem;
 }
 .contact__text-box {
   align-self: center;
 }
 
-.myLocation {
+.leaflet-container {
+  z-index: 999;
+  border-radius: 3px;
+  height: 70vh;
+  margin-top: -10rem;
   width: 100%;
-  height: 500px;
+  overflow: hidden;
+  opacity: 0.8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.leaflet-popup-content-wrapper {
+  background-color: var(--navy);
+  color: white;
+  border-radius: 7px;
+}
+.leaflet-popup-content-wrapper .leaflet-popup-content {
+  font-size: var(--fonts-xs);
+}
+.leaflet-popup-content-wrapper .leaflet-popup-tip {
+  background: var(--navy) !important;
+}
+
+.leaflet-tile {
+  filter: hue-rotate(35deg);
 }
 
 @media only screen and (max-width: 100em) {
   .section-experience,
 .section-hero,
-.section-about,
-.section-contact {
+.section-about {
     padding: 10rem 10rem;
   }
   .experience__jobs-tab {
@@ -1293,8 +1323,7 @@ nav .nav--links .resume-button {
 @media only screen and (max-width: 85em) {
   .section-experience,
 .section-hero,
-.section-about,
-.section-contact {
+.section-about {
     padding: 10rem 6rem;
   }
   .about__tags-box {
@@ -1317,7 +1346,8 @@ nav .nav--links .resume-button {
   .section-experience,
 .section-hero,
 .section-about,
-.section-projects {
+.section-projects,
+.section-contact {
     padding: 10rem 10rem;
   }
   .section-experience {
@@ -1436,8 +1466,7 @@ nav .nav--links .resume-button {
   .section-projects {
     padding: 10rem 10rem;
   }
-  .section-contact,
-.section-about {
+  .section-about {
     padding: 10rem 6rem;
   }
   .about__tags-box {
