--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -1,12 +1,48 @@
 .section-contact {
-  padding: 10rem 22rem;
+  padding: 15rem 0rem 0rem 12rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .contact {
+  width: 100%;
   @include two_col_grid_section;
+  grid-template-columns: 1fr 1fr;
+
+  gap: 4.8rem;
 }
 
-.myLocation {
+.leaflet-container {
+  z-index: 999;
+  border-radius: 3px;
+  height: 70vh;
+  margin-top: -10rem;
   width: 100%;
-  height: 500px;
+  overflow: hidden;
+  opacity: 0.8;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.leaflet-popup-content-wrapper {
+  background-color: var(--navy);
+  color: white;
+  border-radius: 7px;
+
+  .leaflet-popup-content {
+    font-size: var(--fonts-xs);
+  }
+
+  .leaflet-popup-tip {
+    background: var(--navy) !important;
+  }
+}
+
+.leaflet-tile {
+  filter: hue-rotate(35deg);
 }
