Feat: add footer at the bottom of the page

--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -56,7 +56,7 @@
 .form-button:link,
 .form-button:visited {
   text-transform: uppercase;
-
+  margin-bottom: 3rem;
   padding: 1.5rem 2rem;
   border-radius: 10rem;
 
