--- a/src/styles/responsiveness/_index.scss
+++ b/src/styles/responsiveness/_index.scss
@@ -85,6 +85,14 @@
     }
   }
 
+  .contact-form__group {
+    padding: 0;
+  }
+
+  .contact {
+    margin-top: -1rem;
+  }
+
   .hero {
     gap: 8.4rem;
   }
